css/style.css
* {
    font-family: Arial, Helvetica, sans-serif;
    margin: auto;
    /* background-color: black; */
    
}
header{
    font-size: 70%;
}
#submit {
    background: black;
    color: white;
    font-family: Arial, Helvetica, sans-serif;
    margin-top: 20px;
}

.column{
    float: left;
    position: relative;
    width: 50%;
}

span#contact {
    font-weight: bold;
    
}

.row:after {
    content: "";
    display: table;
    clear: both;
  }

  p#text {
    font-size: 125%;
    background-color: white;
    margin: 10px
  }

  form {
    margin: 10px;
    background-color: white;
  }

  img {
    background-color: lightgray;
  }

  br {
    background-color: white;
    color: white;
  }

  input{
    padding: 3px;
    background-color: white;
  }
label {
    background-color: white;
}

  img {
    margin: 20px;
  }

  header {
    margin: 20px
  }

  div#row1.row {
    background-color:lightgray;
  }
.container {
  padding-top: 1%;
  position: relative;
}
  #bottom {
    background-color: black;
    padding-bottom: 100%;
    margin: auto;
    overflow: hidden;
  }
  #fam{
    height:70%;
    width: 50%;
    position: relative;
    left: 20%
  }
  footer {
    background-color: black;
    margin-bottom: 0;
    overflow: hidden;
    height: 100%;
  }

div#row2 {
    background-color:white;
}

#logo {
  position: relative;
  width: 60%;
  height: 460%;
}

